--- a/test/integration/url-imports/pages/css.module.css
+++ b/test/integration/url-imports/pages/css.module.css
@@ -1,3 +1,4 @@
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css');
 .main {
   background: url('https://github.com/vercel/next.js/raw/canary/test/integration/url/public/vercel.png');
   background-size: contain;
